# template_v3

./: .dockerignore  .env  .gitignore  AGENTS.md  README.md  entrypoint.sh  pyproject.toml  set_version.py
docs/: FSD_SDD_v1.md
iac/docker/: alpine.dockerfile
src/skel_v3/: .env  __init__.py  app.py  config.py
src/skel_v3/api/: __init__.py  example.py  health.py  schemas.py
src/skel_v3/db/: __init__.py  pg_pool.py  redis_apikeys.py  redis_pool.py
src/skel_v3/logs/: __init__.py  formatter.py  setup.py
src/skel_v3/util/: __init__.py  apikeys.py  decorators.py  request_id.py
src/skel_v3/worker/: __init__.py  runtime.py
tests/: test_app.py
